# supercell-coding-challenge

./: CMakeLists.txt  CREDITS.md  NOTES.md  README.md
assets/: ui.psd
src/: Audio.cpp  Audio.h  Ball.cpp  Ball.h  Constants.h  Controller.h  ControllerAI.cpp  ControllerAI.h  ControllerInput.cpp  ControllerInput.h  Game.cpp  Game.h  Main.cpp  MathUtils.cpp  MathUtils.h  Menu.cpp  Menu.h  Paddle.cpp  Paddle.h  Pitch.cpp  Pitch.h
src/resources/: ResourcePath.mm  Resources.cpp  Resources.h
